--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.3"
+  },
+  "dependencies": {
+    "fs": "^0.0.1-security"
   }
 }
