--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "typescript": "^5.0.3"
   },
   "dependencies": {
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-jest": "^27.2.1",
     "fs": "^0.0.1-security"
   }
 }
