--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/xmldom": "^0.1.31",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "eslint": "^8.37.0",
@@ -24,6 +25,9 @@
   "dependencies": {
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-jest": "^27.2.1",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "typescript-collections": "^1.3.3",
+    "xmldom": "^0.6.0",
+    "xpath": "^0.0.32"
   }
 }
