--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/xml2js": "^0.4.11",
     "@types/xmldom": "^0.1.31",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
@@ -27,6 +28,7 @@
     "eslint-plugin-jest": "^27.2.1",
     "fs": "^0.0.1-security",
     "typescript-collections": "^1.3.3",
+    "xml2js": "^0.5.0",
     "xmldom": "^0.6.0",
     "xpath": "^0.0.32"
   }
