--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "docs": "typedoc --out docs './src/**/*.ts'"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
+    "typedoc": "^0.24.6",
     "typescript": "^5.0.3"
   },
   "dependencies": {
