main: Init tests structure and implement tests for parseMEC and parseMMC functions in domain

--- a/package.json
+++ b/package.json
@@ -7,10 +7,18 @@
     "test": "jest",
     "docs": "typedoc --out docs './src/**/*.ts'"
   },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/__tests__/**/*.test.ts"
+    ]
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@types/xmldom": "^0.1.31",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
