--- a/package.json
+++ b/package.json
@@ -28,15 +28,18 @@
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.5.0",
+    "json-schema-to-typescript": "^13.0.1",
     "ts-jest": "^29.1.0",
     "typedoc": "^0.24.6",
     "typescript": "^5.0.3"
   },
   "dependencies": {
+    "@types/xml2json": "^0.11.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-jest": "^27.2.1",
     "fs": "^0.0.1-security",
     "typescript-collections": "^1.3.3",
+    "xml2json": "^0.12.0",
     "xmldom": "^0.6.0",
     "xpath": "^0.0.32"
   }
