--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.5.1",
+    "@types/pretty-data": "^0.40.0",
     "@types/xmldom": "^0.1.31",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
@@ -38,6 +39,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-jest": "^27.2.1",
     "fs": "^0.0.1-security",
+    "pretty-data": "^0.40.0",
     "typescript-collections": "^1.3.3",
     "xml2json": "^0.12.0",
     "xmldom": "^0.6.0",
