--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -7,6 +7,7 @@ jobs:
     coverage:
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/checkout@v3
             - uses: ArtiomTr/jest-coverage-report-action@v2
               id: tests
               with:
