add_validators: add methods to validate with JSON Schema and begin to work on arrays issues

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 node_modules/
 test*
-assets/
+assets/movie*
+assets/black*
+assets/xyz*
 out*
 trash*
 *.zip
 notes.txt
 .idea/
 act
+*Arrays
 ```
