--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
     "jest": "^29.5.0",
     "json-schema-to-typescript": "^13.0.1",
     "ts-jest": "^29.1.0",
+    "ts-json-schema-generator": "^1.2.0",
     "typedoc": "^0.24.6",
     "typescript": "^5.0.3"
   },
   "dependencies": {
     "@types/xml2json": "^0.11.4",
+    "ajv": "^8.12.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-jest": "^27.2.1",
+    "fast-xml-parser": "^4.2.2",
     "fs": "^0.0.1-security",
     "pretty-data": "^0.40.0",
     "typescript-collections": "^1.3.3",
