--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@types/xml2json": "^0.11.4",
     "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-jest": "^27.2.1",
     "fast-xml-parser": "^4.2.2",
