--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,4 @@
-module.exports = {
+{
   "root": true,
   "env": {
     "commonjs": true,
@@ -31,6 +31,14 @@ module.exports = {
       },
       "rules": {
         "@typescript-eslint/no-floating-promises": ["error"]
+      }
+    },
+    {
+      "files": ["*.test.ts"],
+      "rules": {
+        "max-classes-per-file": "off",
+        "class-methods-use-this": "off",
+        "no-useless-escape": "off"
       }
     }
   ]
