--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "jest",
     "docs": "typedoc --out docs './src/**/*.ts'"
@@ -45,8 +46,10 @@
     "eslint-plugin-jest": "^27.2.1",
     "fast-xml-parser": "^4.2.2",
     "fs": "^0.0.1-security",
+    "json2xml": "^0.1.3",
     "pretty-data": "^0.40.0",
     "typescript-collections": "^1.3.3",
+    "xml-js": "^1.6.11",
     "xml2js": "^0.6.0",
     "xml2json": "^0.12.0",
     "xmldom": "^0.6.0",
