--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xmltotypescript",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "jest",
     "docs": "typedoc --out docs './src/**/*.ts'",
